poi的helloworld测试---读取excel

--- a/pom.xml
+++ b/pom.xml
@@ -7,19 +7,69 @@
   <version>0.0.1-SNAPSHOT</version>
   <packaging>jar</packaging>
 
-  <name>TestPoi</name>
-  <url>http://maven.apache.org</url>
-
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
-  <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>
-  </dependencies>
+      <name>TestPoi</name>
+	  <url>http://maven.apache.org</url>
+	  
+	  
+	  <distributionManagement>
+	  	<snapshotRepository>
+	  		<id>user-snapshots</id>
+	  		<name>User Project Snapshots</name>
+	  		<url>http://localhost:8081/nexus/content/repositories/byht-snapshots</url>
+	  	</snapshotRepository>
+	  	<repository>
+	  		<id>user-release</id>
+	  		<name>User Project Releases</name>
+	  		<url>http://localhost:8081/nexus/content/repositories/byht/</url>
+	  	</repository>
+	  </distributionManagement>
+  
+  
+  	  <repositories>
+	  	<repository>
+	  		<id>nexus</id>
+	  		<name>Nexus Repository</name>
+	  		<url>http://localhost:8081/nexus/content/groups/public</url>
+	  		<snapshots><enabled>true</enabled></snapshots>
+	  		<releases><enabled>true</enabled></releases>
+	  	</repository>
+	  </repositories>
+  
+	  <dependencies>
+	    <dependency>
+	      <groupId>junit</groupId>
+	      <artifactId>junit</artifactId>
+	      <version>4.10</version>
+	      <scope>test</scope>
+	    </dependency>
+
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi</artifactId>
+			<version>3.9</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi-ooxml</artifactId>
+			<version>3.9</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi-ooxml-schemas</artifactId>
+			<version>3.9</version>
+		</dependency>
+		
+		<dependency>
+		  <groupId>commons-beanutils</groupId>
+		  <artifactId>commons-beanutils</artifactId>
+		  <version>1.8.3</version>
+		</dependency>
+	  </dependencies>
+    
 </project>
